--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
+    "tailwindcss": "^3.0.18",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
