--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^2.0.1",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
-    "tailwindcss": "^3.0.18",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
+    "@tsconfig/svelte": "^3.0.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.2",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.2",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.3",
+    "vite": "^2.9.12"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1"
   }
 }
